Adding more sample code
